# KnapsackGenetic

./: .gitignore  Cargo.toml  README.md
src/: crossover_method.rs  genetic_algorithm.rs  individual.rs  lib.rs  main.rs  mutation_method.rs  selection_method.rs  utils.rs
