[package]
name = "knapsack_genetic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derive_more = "0.99.5" 
log = "0.4.20"
num-traits = "0.2.17"
plotters = "0.3.5"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
